fixing alignment with weather widget

--- a/resources/style.css
+++ b/resources/style.css
@@ -201,7 +201,7 @@ body {
 .bottom-right {
   background-color:rgba(255, 255, 255, 0.5);
   border-radius:.5em;
-  bottom:50px;
+  bottom:2.5vw;
   position:fixed;
   right:0; 
 }
